--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -1665,7 +1665,7 @@ footer {
     }
 
     header {
-        background-image: url(/yunify-glyph/image/yunify-glyph.png);
+        background-image: url(/yunify-glyph/image/yunify-glyph-mobile.png);
         background-color: #ffffff;
         background-size: contain;
         background-repeat: no-repeat;
@@ -1935,11 +1935,12 @@ footer {
     
     .typical-icon-library {
         grid-column: 1 / 3;
-        grid-row: 45 / 49;
+        grid-row: 45 / 50;
         width: 100%;
-        align-self: start;
+        max-width: 490px;
+        align-self: center;
         position: relative;
-        top: -20px;
+        top: 0px;
     }
     
     .initial-goals {
@@ -2139,9 +2140,9 @@ footer {
         width: 100%;
         height: 69.64%;
         border: 1px solid #ffffff;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.04), 0px 5px 17px rgba(0, 0, 0, 0.06);
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 3px 12px rgba(0, 0, 0, 0.08);
         overflow: hidden;
-        border-radius: 4px;
+        border-radius: 3px;
         -webkit-transform: translateZ(0);
     }
     
@@ -2222,3 +2223,4 @@ footer {
         align-self: end;
     }
 }
+
