--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -3383,3 +3383,583 @@ footer {
         align-self: end;
     }
 }
+
+@media (max-width: 380px) {
+    main {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(107, 68px);
+        padding: 30px;
+        background-color: #f5f5f5;
+    }
+
+    header {
+        background-image: url(/yunify-glyph/image/yunify-glyph-mobile.png);
+        background-color: #ffffff;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 100%;
+        height: 254px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(50, 69, 88, 0.7);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back:hover {
+        background-color: #166ced;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 4 / 6;
+        align-self: center;
+        font-size: 22px;
+        line-height: 29px;
+        font-weight: normal;
+        letter-spacing: -0.4px;
+        margin: 0px;
+        position: relative;
+        top: 0px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.2px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 6 / 7;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 6 / 7;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 6px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 8 / 14;
+        align-self: start;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 7px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 14 / 17;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        line-height: 13px;
+        align-self: center;
+        position: relative;
+        top: 0px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 16 / 17;
+    }
+    
+    .section-title {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 17 / 18;
+    }
+    
+    .icon-set-container {
+        grid-column: 1 / 3;
+        grid-row: 18 / 41;
+        background-color: #ffffff;
+        padding: 40px 28px;
+    }
+    
+    .category-name {
+        font-size: 19px;
+        line-height: 19px;
+        letter-spacing: -0.1px;
+        font-family: "Roboto";
+        font-weight: bold;
+        margin: 0px;
+    }
+
+    .icon-image {
+        width: 32px;
+    }
+    
+    .icon-name {
+        font-size: 8px;
+        line-height: 8px;
+        letter-spacing: 0.3px;
+        font-family: "Roboto";
+        font-weight: normal;
+        color: #697886;
+        margin-top: 7px;
+        white-space: nowrap;
+        display: none;
+    }
+    
+    .icon-container {
+        grid-column: span 1;
+        display: flex;
+        flex-direction: column;
+        max-width: 40px;
+        align-items: center;
+        min-height: 50px;
+    }
+    
+    .category-container {
+        margin-top: 32px;
+        width: 100%;
+        display: grid;
+        justify-items: center;
+        row-gap: 12px;
+        column-gap: 24px;
+        grid-template-columns: repeat(5, minmax(32px, 1fr));
+    }
+    
+    .icon-category:not(:first-child) {
+        margin-top: 48px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 41 / 42;
+        position: relative;
+        top: 0px;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 3;
+        grid-row: 42 / 43;
+        position: relative;
+        top: 0px;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 43 / 44;
+        position: relative;
+        top: 20px;
+    }
+    
+    .subtitle {
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.6px;
+        margin-top: 4px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 3;
+        grid-row: 44 / 46;
+        margin-top: 0px;
+    }
+    
+    .typical-icon-library {
+        grid-column: 1 / 3;
+        grid-row: 48 / 51;
+        width: 100%;
+        max-width: 330px;
+        align-self: center;
+        position: relative;
+        top: 40px;
+    }
+    
+    .initial-goals {
+        grid-column: 1 / 3;
+        grid-row: 52 / 53;
+        width: 100%;
+        position: relative;
+        top: 0px;
+    }
+    
+    .goal-list {
+        grid-column: 1 / 3;
+        grid-row: 53 / 55;
+        margin: 0px;
+        position: relative;
+        top: 55px;
+        left: -15px;
+        width: 98%;
+    }
+
+    .paragraph-title {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+
+    .pt-1 {
+        margin: 0px;
+    }
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 4px;
+    }
+    
+    .fp-2 {
+        margin-top: 6px;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 57 / 58;
+        position: relative;
+        top: 15px;
+    }
+    
+    .fp-3 {
+        grid-column: 1 / 3;
+        grid-row: 58 / 60;
+        position: relative;
+        top: 0px;
+    }
+    
+    .image-container {
+        grid-column: 1 / 3;
+        grid-row: 60 / 63;
+        background-color: #ffffff;
+        display: flex;
+        gap: 12px;
+        justify-content: center;
+        align-items: center;
+        padding: 72px 28px;
+        position: relative;
+        top: 10px;
+    }
+    
+    .template-image {
+        min-width: 0;
+    }
+    
+    .process-title-3 {
+        grid-column: 1 / 3;
+        grid-row: 64 / 65;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-4 {
+        grid-column: 1 / 3;
+        grid-row: 65 / 68;
+        position: relative;
+        top: 0px;
+    }
+    
+    .grey-icon {
+        grid-column: 1 / 3;
+        grid-row: 68 / 70;
+        width: 100%;
+        height: 146px;
+        background-color: #ffffff;
+        object-fit: contain;
+        position: relative;
+        top: 0px;
+    }
+    
+    .green-icon {
+        grid-column: 1 / 3;
+        grid-row: 70 / 72;
+        width: 100%;
+        height: 146px;
+        background-color: #ffffff;
+        object-fit: contain;
+        position: relative;
+        top: 0px;
+    }
+    
+    .white-icon {
+        grid-column: 1 / 3;
+        grid-row: 72 / 74;
+        width: 100%;
+        height: 146px;
+        background-color: #102b3a;
+        object-fit: contain;
+        position: relative;
+        top: 0px;
+    }
+    
+    .process-title-4 {
+        grid-column: 1 / 3;
+        grid-row: 75 / 76;
+        position: relative;
+        top: 25px;
+    }
+    
+    .fp-5 {
+        grid-column: 1 / 3;
+        grid-row: 76 / 83;
+    }
+    
+    .fp-6 {
+        margin-top: 10px;
+    }
+    
+    .sizes-image {
+        grid-column: 1 / 3;
+        grid-row: 81 / 84;
+        align-self: center;
+        width: 100%;
+        position: relative;
+        top: 5px;
+    }
+    
+    .fp-7 {
+        grid-column: 1 / 3;
+        grid-row: 84 / 86;
+        position: relative;
+        top: -40px;
+    }
+    
+    .process-title-5 {
+        grid-column: 1 / 3;
+        grid-row: 87 / 88;
+        position: relative;
+        top: -40px;
+    }
+    
+    .fp-8 {
+        grid-column: 1 / 3;
+        grid-row: 88 / 89;
+        width: 100%;
+        position: relative;
+        top: -60px;
+    }
+    
+    .shapes-image {
+        grid-column: 1 / 3;
+        grid-row: 91 / 92;
+        width: 100%;
+        align-self: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 3;
+        grid-row: 92 / 93;
+        position: relative;
+        top: 10px;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 2;
+        grid-row: 93 / 94;
+        position: relative;
+        top: 10px;
+    }
+    
+    .video-container {
+        grid-column: 1 / 3;
+        grid-row: 94 / 97;
+        position: relative;
+        top: 10px;
+    }
+    
+    .position-box {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container {
+        position: absolute;
+        width: 100%;
+        height: 69.64%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08), 0px 2px 8px rgba(0, 0, 0, 0.05);
+        overflow: hidden;
+        border-radius: 2px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .appcenter-video {
+        width: 100%;
+    }
+    
+    .s-5 {
+        grid-column: 1 / 3;
+        grid-row: 97 / 98;
+        position: relative;
+        top: 30px;
+    }
+    
+    .st-4 {
+        grid-column: 1 / 2;
+        grid-row: 98 / 99;
+        position: relative;
+        top: 30px;
+    }
+    
+    .fp-9 {
+        grid-column: 1 / 3;
+        grid-row: 99 / 100;
+        align-self: center;
+        position: relative;
+        top: 30px;
+    }
+    
+    .owc-1 {
+        grid-column: 1 / 2;
+        grid-row: 101 / 103;
+        background-image: url(/yunify-glyph/image/other-works-1.png);
+    }
+    
+    .owc-2 {
+        grid-column: 2 / 3;
+        grid-row: 101 / 103;
+        background-image: url(/yunify-glyph/image/other-works-2.png);
+    }
+    
+    .owc-3 {
+        grid-column: 1 / 2;
+        grid-row: 103 / 105;
+        background-image: url(/yunify-glyph/image/other-works-3.png);
+    }
+    
+    .owc-4 {
+        grid-column: 2 / 3;
+        grid-row: 103 / 105;
+        background-image: url(/yunify-glyph/image/other-works-4.png);
+    }
+    
+    .owc-5 {
+        grid-column: 1 / 2;
+        grid-row: 105 / 107;
+        background-image: url(/yunify-glyph/image/other-works-5.png);
+    }
+    
+    .owc-6 {
+        grid-column: 2 / 3;
+        grid-row: 105 / 107;
+        background-image: url(/yunify-glyph/image/other-works-6.png);
+    }
+    
+    .other-works-container {
+        background-size: contain;
+        background-color: #000000;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 107 / 108;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
