--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -416,6 +416,8 @@ p {
     grid-row: 79 / 82;
     align-self: end;
     width: 100%;
+    position: relative;
+    top: -15px;
 }
 
 .fp-7 {
@@ -951,6 +953,8 @@ footer {
         grid-row: 82 / 84;
         align-self: end;
         width: 100%;
+        position: relative;
+        top: -10px;
     }
     
     .fp-7 {
@@ -2073,10 +2077,10 @@ footer {
     .sizes-image {
         grid-column: 1 / 3;
         grid-row: 76 / 79;
-        align-self: center;
+        align-self: end;
         width: 100%;
         position: relative;
-        top: 20px;
+        top: -30px;
     }
     
     .fp-7 {
@@ -5131,5 +5135,14 @@ footer {
         border-top: 1px solid #c6c6c6;
         padding-top: 16px;
         align-self: end;
+    }
+}
+
+@media (hover: none) {
+    .link:hover {
+        text-decoration: none;
+    }
+    .back:hover {
+        background-color: rgba(0, 0, 0, 0.58);
     }
 }
