--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -319,3 +319,292 @@ footer {
     padding-top: 16px;
     align-self: end;
 }
+
+@media (max-width: 1112px) {
+    main {
+        display: grid;
+        gap: 17px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(100, 80px);
+        max-width: 1120px;
+        padding: 70px;
+        background-color: #f5f5f5;
+    }
+    
+    header {
+        background-image: url(/xxpie/image/xxpie.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 441px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(255, 255, 255, 0.17);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 10px;
+        left: 8px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 74px;
+        height: 32px;
+        transition: background-color 0.2s cubic-bezier(0.16, 0.41, 0.74, 0.96);
+    }
+    
+    .back:hover {
+        background-color: #166ced;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 8px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: 600;
+        position: relative;
+        left: 11px;
+        top: 1px;
+    }
+    
+    h1 {
+        grid-column: 1 / 7;
+        grid-row: 5 / 8;
+        align-self: center;
+        font-size: 38px;
+        line-height: 48px;
+        font-weight: normal;
+        letter-spacing: -1.5px;
+        margin: 0px;
+        position: relative;
+        top: 0px;
+    }
+    
+    .bold-title {
+        letter-spacing: -1px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 7;
+        grid-row: 7 / 8;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 8 / 10;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 4;
+        grid-row: 8 / 10;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .work-description {
+        grid-column: 4 / 7;
+        grid-row: 8 / 14;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 12px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 16px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 7;
+        grid-row: 14 / 15;
+    }
+    
+    .section-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 15 / 16;
+    }
+    
+    .album {
+        grid-column: 1 / 7;
+        grid-row: 16 / 23;
+        width: 100%;
+        border-radius: 4px;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.04), 0px 9px 30px rgba(0, 0, 0, 0.07);
+    }
+    
+    .album_mobile {
+        grid-column: 1 / 4;
+        grid-row: 24 / 31;
+        width: 100%;
+    }
+    
+    .upload_mobile {
+        grid-column: 4 / 7;
+        grid-row: 24 / 31;
+        width: 100%;
+    }
+    
+    .icon-container {
+        grid-column: 1 / 7;
+        grid-row: 33 / 60;
+        background-color: #ffffff;
+        padding: 100px 60px;
+        
+    }
+    
+    .grid-container {
+        display: grid;
+        row-gap: 52px;
+        column-gap: 0px;
+        grid-template-columns: repeat(7, minmax(48px, 1fr));
+        width: 100%;
+        justify-items: center;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 7;
+        grid-row: 60 / 61;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 61 / 62;
+    }
+    
+    .process-title-1 {
+        grid-column: 2 / 6;
+        grid-row: 62 / 63;
+        position: relative;
+        top: 15px;
+    }
+    
+    .subtitle {
+        font-size: 22px;
+        line-height: 22px;
+        letter-spacing: -0.2px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 31px;
+        line-height: 38px;
+        letter-spacing: -0.8px;
+        margin-top: 6px;
+    }
+    
+    .fp-1 {
+        grid-column: 2 / 6;
+        grid-row: 63 / 64;
+        margin-top: 0px;
+    }
+    
+    .design-system {
+        grid-column: 1 / 7;
+        grid-row: 65 / 74;
+        background-image: url(/xxpie/image/design-system.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
+    
+    .process-title-2 {
+        grid-column: 2 / 6;
+        grid-row: 75 / 76;
+    }
+    
+    .fp-2 {
+        grid-column: 2 / 6;
+        grid-row: 76 / 77;
+        margin-top: 0px;
+    }
+    
+    .details {
+        grid-column: 1 / 7;
+        grid-row: 78 / 89;
+        background-image: url(/xxpie/image/details.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
+    
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 89 / 90;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
