--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -210,7 +210,7 @@ p {
     grid-column: 1 / 13;
     grid-row: 15 / 23;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 8px;
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
 }
@@ -325,7 +325,7 @@ footer {
         display: grid;
         gap: 17px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(100, 80px);
+        grid-template-rows: repeat(89, 80px);
         max-width: 1120px;
         padding: 70px;
         background-color: #f5f5f5;
@@ -434,7 +434,7 @@ footer {
     }
     
     .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
     }
     
     .work-description {
@@ -496,7 +496,7 @@ footer {
         grid-column: 1 / 7;
         grid-row: 16 / 23;
         width: 100%;
-        border-radius: 4px;
+        border-radius: 6px;
         border: 1px solid #ffffff;
         box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.04), 0px 9px 30px rgba(0, 0, 0, 0.07);
     }
@@ -504,13 +504,17 @@ footer {
     .album_mobile {
         grid-column: 1 / 4;
         grid-row: 24 / 31;
+        align-items: center;
         width: 100%;
+        position: relative;
     }
     
     .upload_mobile {
         grid-column: 4 / 7;
         grid-row: 24 / 31;
+        align-items: center;
         width: 100%;
+        position: relative;
     }
     
     .icon-container {
@@ -578,18 +582,20 @@ footer {
     
     .process-title-2 {
         grid-column: 2 / 6;
-        grid-row: 75 / 76;
+        grid-row: 74 / 75;
+        position: relative;
+        top: 15px;
     }
     
     .fp-2 {
         grid-column: 2 / 6;
-        grid-row: 76 / 77;
+        grid-row: 75 / 76;
         margin-top: 0px;
     }
     
     .details {
         grid-column: 1 / 7;
-        grid-row: 78 / 89;
+        grid-row: 77 / 89;
         background-image: url(/xxpie/image/details.png);
         background-size: contain;
         background-position: top;
@@ -606,5 +612,314 @@ footer {
         border-top: 1px solid #c6c6c6;
         padding-top: 16px;
         align-self: end;
+    }
+}
+
+@media (max-width: 890px) {
+    main {
+        display: grid;
+        gap: 15px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(84, 80px);
+        max-width: 1120px;
+        padding: 60px;
+        background-color: #f5f5f5;
+    }
+    
+    header {
+        background-image: url(/xxpie/image/xxpie.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 425px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(255, 255, 255, 0.17);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 7;
+        grid-row: 5 / 7;
+        align-self: center;
+        font-size: 28px;
+        line-height: 38px;
+        font-weight: normal;
+        letter-spacing: -0.8px;
+        margin: 0px;
+        position: relative;
+        top: -10px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.4px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 7;
+        grid-row: 6 / 7;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 3;
+        grid-row: 7 / 8;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 3 / 7;
+        grid-row: 7 / 8;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 8px;
+    }
+    
+    .work-description {
+        grid-column: 3 / 7;
+        grid-row: 9 / 14;
+        position: relative;
+        top: -30px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 10px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 17px;
+        line-height: 25px;
+        letter-spacing: -0.1px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 16px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 7;
+        grid-row: 14 / 15;
+    }
+    
+    .section-title {
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 15 / 16;
+    }
+    
+    .album {
+        grid-column: 1 / 7;
+        grid-row: 16 / 22;
+        width: 100%;
+        border-radius: 6px;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.04), 0px 9px 30px rgba(0, 0, 0, 0.07);
+    }
+    
+    .album_mobile {
+        grid-column: 1 / 4;
+        grid-row: 23 / 29;
+        align-items: center;
+        width: 100%;
+        position: relative;
+    }
+    
+    .upload_mobile {
+        grid-column: 4 / 7;
+        grid-row: 23 / 29;
+        align-items: center;
+        width: 100%;
+        position: relative;
+    }
+    
+    .icon-container {
+        grid-column: 1 / 7;
+        grid-row: 31 / 56;
+        background-color: #ffffff;
+        padding: 70px 65px;
+        
+    }
+    
+    .grid-container {
+        display: grid;
+        row-gap: 52px;
+        column-gap: 41px;
+        grid-template-columns: repeat(7, minmax(40px, 1fr));
+        width: 100%;
+        justify-items: center;
+    }
+
+    .icon-image {
+        width: 40px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 7;
+        grid-row: 56 / 57;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 57 / 58;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 7;
+        grid-row: 58 / 59;
+        position: relative;
+        top: 15px;
+    }
+    
+    .subtitle {
+        font-size: 20px;
+        line-height: 20px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 30px;
+        line-height: 36px;
+        letter-spacing: -0.8px;
+        margin-top: 8px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 7;
+        grid-row: 59 / 60;
+        margin-top: 0px;
+    }
+    
+    .design-system {
+        grid-column: 1 / 7;
+        grid-row: 61 / 72;
+        background-image: url(/xxpie/image/design-system-medium.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 7;
+        grid-row: 72 / 73;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-2 {
+        grid-column: 1 / 7;
+        grid-row: 73 / 74;
+        margin-top: 0px;
+    }
+    
+    .details {
+        grid-column: 1 / 7;
+        grid-row: 75 / 84;
+        background-image: url(/xxpie/image/details.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+        position: relative;
+        top: -40px;
+    }
+    
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 84 / 85;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
+
+@media (max-width: 768px) {
+    main {
+        display: grid;
+        gap: 12px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(89, 80px);
+        max-width: 1120px;
+        padding: 45px;
+        background-color: #f5f5f5;
     }
 }
