--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -787,9 +787,9 @@ footer {
         grid-column: 1 / 7;
         grid-row: 16 / 22;
         width: 100%;
-        border-radius: 6px;
+        border-radius: 4px;
         border: 1px solid #ffffff;
-        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.04), 0px 9px 30px rgba(0, 0, 0, 0.07);
+        box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.06), 0px 7px 22px rgba(0, 0, 0, 0.06);
     }
     
     .album_mobile {
@@ -916,10 +916,303 @@ footer {
     main {
         display: grid;
         gap: 12px;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(89, 80px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(81, 80px);
         max-width: 1120px;
         padding: 45px;
         background-color: #f5f5f5;
+    }
+
+    header {
+        background-image: url(/xxpie/image/xxpie.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 309px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(255, 255, 255, 0.17);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 4 / 6;
+        align-self: center;
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: normal;
+        letter-spacing: -0.5px;
+        margin: 0px;
+        position: relative;
+        top: -5px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.4px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 6 / 7;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 6 / 7;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 8px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 8 / 12;
+        position: relative;
+        top: -40px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 10px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 16px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 12 / 13;
+    }
+    
+    .section-title {
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 13 / 14;
+    }
+    
+    .album {
+        grid-column: 1 / 3;
+        grid-row: 14 / 18;
+        justify-self: center;
+        width: 100%;
+        max-width: 490px;
+        border-radius: 3px;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.10), 0px 5px 16px rgba(0, 0, 0, 0.04);
+    }
+    
+    .album_mobile {
+        grid-column: 1 / 2;
+        grid-row: 19 / 24;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        max-width: 239px;
+        position: relative;
+    }
+    
+    .upload_mobile {
+        grid-column: 2 / 3;
+        grid-row: 19 / 24;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        max-width: 239px;
+        position: relative;
+    }
+    
+    .icon-container {
+        grid-column: 1 / 3;
+        grid-row: 25 / 53;
+        background-color: #ffffff;
+        padding: 60px 52px;
+        
+    }
+    
+    .grid-container {
+        display: grid;
+        row-gap: 52px;
+        column-gap: 28px;
+        grid-template-columns: repeat(6, minmax(40px, 1fr));
+        width: 100%;
+        justify-items: center;
+    }
+
+    .icon-image {
+        width: 36px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 53 / 54;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 54 / 55;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 55 / 56;
+        position: relative;
+        top: 15px;
+    }
+    
+    .subtitle {
+        font-size: 19px;
+        line-height: 19px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 28px;
+        line-height: 34px;
+        letter-spacing: -0.6px;
+        margin-top: 7px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 3;
+        grid-row: 56 / 58;
+        margin-top: 0px;
+    }
+    
+    .design-system {
+        grid-column: 1 / 3;
+        grid-row: 58 / 70;
+        background-image: url(/xxpie/image/design-system-small.png);
+        background-size: contain;
+        background-position: left;
+        background-repeat: no-repeat;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 71 / 72;
+        align-self: end;
+        position: relative;
+        top: 30px;
+    }
+    
+    .fp-2 {
+        grid-column: 1 / 3;
+        grid-row: 72 / 73;
+        margin-top: 0px;
+    }
+    
+    .details {
+        grid-column: 1 / 3;
+        grid-row: 74 / 81;
+        max-width: 490px;
+        background-image: url(/xxpie/image/details.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+        position: relative;
+        top: -30px;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 81 / 82;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
     }
 }
