--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -547,8 +547,9 @@ footer {
     .process-title-1 {
         grid-column: 2 / 6;
         grid-row: 62 / 63;
+        align-self: end;
         position: relative;
-        top: 15px;
+        top: 40px;
     }
     
     .subtitle {
@@ -578,13 +579,16 @@ footer {
         background-size: contain;
         background-position: top;
         background-repeat: no-repeat;
+        position: relative;
+        top: 40px;
     }
     
     .process-title-2 {
         grid-column: 2 / 6;
         grid-row: 74 / 75;
+        align-self: end;
         position: relative;
-        top: 15px;
+        top: 45px;
     }
     
     .fp-2 {
