Disabled hover state on touch screen

--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -1535,3 +1535,12 @@ footer {
         align-self: end;
     }
 }
+
+@media (hover: none) {
+    .link:hover {
+        text-decoration: none;
+    }
+    .back:hover {
+        background-color: rgba(0, 0, 0, 0.58);
+    }
+}
