--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -232,7 +232,6 @@ p {
     grid-row: 33 / 52;
     background-color: #ffffff;
     padding: 116px 108px;
-    
 }
 
 .grid-container {
@@ -242,6 +241,10 @@ p {
     grid-template-columns: repeat(10, minmax(48px, 1fr));
     width: 100%;
     justify-items: center;
+}
+
+.icon-image {
+    width: 48px;
 }
 
 .s-3 {
