--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -839,18 +839,22 @@ footer {
     .s-3 {
         grid-column: 1 / 7;
         grid-row: 56 / 57;
+        position: relative;
+        top: 15px;
     }
     
     .st-2 {
         grid-column: 1 / 2;
         grid-row: 57 / 58;
+        position: relative;
+        top: 15px;
     }
     
     .process-title-1 {
         grid-column: 1 / 7;
         grid-row: 58 / 59;
         position: relative;
-        top: 15px;
+        top: 65px;
     }
     
     .subtitle {
@@ -871,6 +875,8 @@ footer {
         grid-column: 1 / 7;
         grid-row: 59 / 60;
         margin-top: 0px;
+        position: relative;
+        top: 30px;
     }
     
     .design-system {
@@ -886,13 +892,13 @@ footer {
         grid-column: 1 / 7;
         grid-row: 74 / 75;
         position: relative;
-        top: -10px;
+        top: 40px;
     }
     
     .fp-2 {
         grid-column: 1 / 7;
         grid-row: 75 / 76;
-        margin-top: -25px;
+        margin-top: 0px;
     }
     
     .details {
@@ -1153,7 +1159,7 @@ footer {
         grid-column: 1 / 3;
         grid-row: 55 / 56;
         position: relative;
-        top: 15px;
+        top: 55px;
     }
     
     .subtitle {
@@ -1173,7 +1179,7 @@ footer {
     .fp-1 {
         grid-column: 1 / 3;
         grid-row: 56 / 58;
-        margin-top: 0px;
+        margin-top: -10px;
     }
     
     .design-system {
@@ -1190,13 +1196,13 @@ footer {
         grid-row: 71 / 72;
         align-self: end;
         position: relative;
-        top: 30px;
+        top: 50px;
     }
     
     .fp-2 {
         grid-column: 1 / 3;
         grid-row: 72 / 73;
-        margin-top: 0px;
+        margin-top: 10px;
     }
     
     .details {
